# huffman-encoding

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  output.huff
include/: decoder.h  encoder.h  node.h
src/: CMakeLists.txt  decoder.cpp  encoder.cpp  main.cpp  node.cpp
test/example/: CMakeLists.txt  file.txt
